--- a/NNMemoryGame/NNMemoryGame/ViewControllers/Base.lproj/Main.storyboard
+++ b/NNMemoryGame/NNMemoryGame/ViewControllers/Base.lproj/Main.storyboard
@@ -75,12 +75,6 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Ze-gR-EWL">
                                         <rect key="frame" x="40" y="20" width="110" height="35"/>
                                         <subviews>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9n4-bc-zFC">
-                                                <rect key="frame" x="68" y="6.5" width="37" height="26"/>
-                                                <fontDescription key="fontDescription" name="YouDecideN-LayerOne" family="YouDecide N" pointSize="26"/>
-                                                <color key="textColor" red="0.68235294117647061" green="0.21568627450980393" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fr_counter" translatesAutoresizingMaskIntoConstraints="NO" id="Lg0-cL-Xu9">
                                                 <rect key="frame" x="3" y="3" width="60" height="29"/>
                                                 <constraints>
@@ -88,18 +82,27 @@
                                                     <constraint firstAttribute="width" constant="60" id="DHe-SD-FTo"/>
                                                 </constraints>
                                             </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9n4-bc-zFC">
+                                                <rect key="frame" x="65" y="3" width="37" height="36"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="36" id="bWY-eW-GDk"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="YouDecideN-LayerOne" family="YouDecide N" pointSize="23"/>
+                                                <color key="textColor" red="0.68235294117647061" green="0.21568627450980393" blue="0.24705882352941178" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstItem="Lg0-cL-Xu9" firstAttribute="centerY" secondItem="9Ze-gR-EWL" secondAttribute="centerY" id="2XK-Lf-YUe"/>
-                                            <constraint firstAttribute="trailing" secondItem="9n4-bc-zFC" secondAttribute="trailing" constant="5" id="KUI-Db-Vwp"/>
-                                            <constraint firstItem="9n4-bc-zFC" firstAttribute="centerY" secondItem="9Ze-gR-EWL" secondAttribute="centerY" constant="2" id="Kwp-hs-2P1"/>
+                                            <constraint firstAttribute="trailing" secondItem="9n4-bc-zFC" secondAttribute="trailing" constant="8" id="KUI-Db-Vwp"/>
+                                            <constraint firstItem="9n4-bc-zFC" firstAttribute="centerY" secondItem="9Ze-gR-EWL" secondAttribute="centerY" constant="3.5" id="Kwp-hs-2P1"/>
                                             <constraint firstAttribute="height" constant="35" id="YB0-61-Aud"/>
                                             <constraint firstAttribute="width" constant="110" id="YLn-Oq-fRQ"/>
                                             <constraint firstItem="Lg0-cL-Xu9" firstAttribute="leading" secondItem="9Ze-gR-EWL" secondAttribute="leading" constant="3" id="aHN-4P-e7h"/>
                                             <constraint firstItem="Lg0-cL-Xu9" firstAttribute="top" secondItem="9Ze-gR-EWL" secondAttribute="top" constant="3" id="aqs-ia-VgW"/>
                                             <constraint firstAttribute="bottom" secondItem="Lg0-cL-Xu9" secondAttribute="bottom" constant="3" id="jVe-wP-Em3"/>
-                                            <constraint firstItem="9n4-bc-zFC" firstAttribute="leading" secondItem="Lg0-cL-Xu9" secondAttribute="trailing" constant="5" id="sY2-Ui-W5m"/>
+                                            <constraint firstItem="9n4-bc-zFC" firstAttribute="leading" secondItem="Lg0-cL-Xu9" secondAttribute="trailing" constant="2" id="sY2-Ui-W5m"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -152,14 +155,14 @@
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="Geb-Wa-Xj0"/>
                                 </connections>
                             </collectionView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="fr_title" translatesAutoresizingMaskIntoConstraints="NO" id="YP5-NP-gYY">
-                                <rect key="frame" x="102" y="105" width="821" height="43"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fr_title" translatesAutoresizingMaskIntoConstraints="NO" id="YP5-NP-gYY">
+                                <rect key="frame" x="43.5" y="321" width="938" height="68"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="YP5-NP-gYY" firstAttribute="top" secondItem="loM-is-FeJ" secondAttribute="bottom" constant="265" id="4Xk-gx-EhC"/>
+                            <constraint firstItem="YP5-NP-gYY" firstAttribute="top" secondItem="loM-is-FeJ" secondAttribute="bottom" constant="224" id="4Xk-gx-EhC"/>
                             <constraint firstItem="YP5-NP-gYY" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Phf-5C-TSs"/>
                             <constraint firstItem="loM-is-FeJ" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Qxs-li-Yft"/>
                             <constraint firstItem="36m-0q-HyN" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="Re2-j7-r9F"/>
@@ -326,7 +329,7 @@
         <image name="background" width="1024" height="768"/>
         <image name="choose_language_logo" width="457" height="420"/>
         <image name="fr_counter" width="60" height="24"/>
-        <image name="fr_title" width="821" height="43"/>
+        <image name="fr_title" width="938" height="68"/>
         <image name="french_btn" width="202" height="65"/>
         <image name="lose_done_btn_ar" width="179" height="58"/>
         <image name="lose_done_btn_fr" width="179" height="57"/>
